--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,28 @@
 <resources>
-    <string name="app_name">Ticket-Machine</string>
+    <string name="app_name">TicketMachine</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">Ticket Machine</string>
+    <string name="nav_header_subtitle">ticket.machine@gmail.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-
     <string name="home_second">Home Second</string>
+    <!--Navigation-->
+        <string name="menu_home">Home</string>
+        <string name="menu_events">Parties</string>
+        <string name="menu_tickets">Tickets</string>
+
+
+    <!--Navigation-->
+    <!--Home-->
+        <string name="home_description_image_view">Party</string>
+    <!--/Home-->
+    <!--Events-->
+        <string name="events_first_header">Events</string>
+    <!--/Events-->
+
+    <!--Tickets-->
+    <string name="tickets_first_header">Tickets</string>
+    <!--/Tickets-->
 </resources>
