--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <!-- APP -->
     <string name="app_name">TicketMachine</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -8,18 +9,35 @@
     <string name="action_settings">Settings</string>
 
     <string name="home_second">Home Second</string>
-    <!--Navigation-->
-        <string name="menu_home">Home</string>
-        <string name="menu_events">Parties</string>
-        <string name="menu_tickets">Tickets</string>
-
+    <!-- /APP -->
 
     <!--Navigation-->
+    <string name="menu_home">Home</string>
+    <string name="menu_events">Parties</string>
+    <string name="menu_tickets">Tickets</string>
+    <string name="menu_register">Register</string>
+    <string name="menu_login">Login</string>
+    <!--/Navigation-->
+
     <!--Home-->
-        <string name="home_description_image_view">Party</string>
+    <string name="home_description_image_view">Party</string>
     <!--/Home-->
+
+    <!-- Register -->
+    <string name="hintTextPersonName">Name</string>
+    <string name="hintTextEmailAddress">Email address</string>
+    <string name="hintTextPassword">Password</string>
+    <string name="hintTextConfirmPassword">Confirm Password</string>
+    <string name="btnTextRegister">Register</string>
+    <string name="registerAddImageView">Add account</string>
+    <!-- /Register -->
+
+    <!-- Login -->
+    <string name="loginEntranceImageView">Entrance</string>
+    <string name="btnTextLogin">Login</string>
+    <string name="textViewLogin">Login?Registration</string>
     <!--Events-->
-        <string name="events_first_header">Events</string>
+    <string name="events_first_header">Events</string>
     <!--/Events-->
 
     <!--Tickets-->
