--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,22 @@
     <string name="URL_EVENTS">https://ticketmachine.hostingasp.pl/getevents.php</string>
     <!-- /URL -->
 
+    <!-- Tools -->
+    <string name="login_preference">com.example.ticket_machine_login_preference</string>
+    <string name="login_status_preference">com.example.ticket_machine_login_status_preference</string>
+    <string name="login_role_preference">com.example.ticket_machine_login_role_preference</string>
+    <string name="role_admin">admin</string>
+    <string name="role_bodyguard">bodyguard</string>
+    <string name="role_customer">customer</string>
+    <string name="role_none">none</string>
+    <!-- /Tools -->
+
+    <!-- Settings -->
+    <string name="action_logout">Logout</string>
+    <string name="success_logout">Successfully logged out!</string>
+    <string name="action_settings">Settings</string>
+    <!-- /Settings -->
+
     <!-- APP -->
     <string name="app_name">TicketMachine</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -12,7 +28,6 @@
     <string name="nav_header_title">Ticket Machine</string>
     <string name="nav_header_subtitle">ticket.machine@gmail.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
 
     <string name="home_second">Home Second</string>
     <!-- /APP -->
@@ -42,7 +57,6 @@
     <!-- Login -->
     <string name="login_entrance_image_view">Entrance</string>
     <string name="btn_text_login">Login</string>
-    <string name="text_view_login">Registration</string>
     <!-- /Login -->
 
     <!--Events-->
