Ticket list and details with QR Code as new activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="URL_EVENTS">https://ticketmachine.hostingasp.pl/getEvents.php</string>
     <string name="URL_ADDTICKET">https://ticketmachine.hostingasp.pl/addTicket.php</string>
     <string name="URL_GETUSERTICKETS">https://ticketmachine.hostingasp.pl/getUserTickets.php</string>
+    <string name="URL_GETTICKET">https://ticketmachine.hostingasp.pl/getTicket.php</string>
     <!-- /URL -->
 
     <!-- Tools -->
